// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Start Experiment workflow renders correctly 1`] = `
"<Styled(div)>
  <h3 style={{...}}>
    Cluster Pair
  </h3>
  <TextField name=\\"downstreamCluster\\" label=\\"Downstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <TextField name=\\"upstreamCluster\\" label=\\"Upstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <TextField name=\\"requestsPercentage\\" label=\\"Percentage of Requests Served by All Hosts\\" defaultValue=\\"0\\" type=\\"number\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <h3 style={{...}}>
    Faults
  </h3>
  <Select name=\\"faultType\\" label=\\"Fault Type\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField name=\\"httpStatus\\" label=\\"HTTP Status\\" defaultValue={[undefined]} type=\\"number\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
</Styled(div)>"
`;

exports[`Start Experiment workflow renders correctly with environments 1`] = `
"<Styled(div)>
  <h3 style={{...}}>
    Cluster Pair
  </h3>
  <TextField name=\\"downstreamCluster\\" label=\\"Downstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <TextField name=\\"upstreamCluster\\" label=\\"Upstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <Select name=\\"environmentValue\\" label=\\"Environment\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField name=\\"requestsPercentage\\" label=\\"Percentage of Requests Served by All Hosts\\" defaultValue=\\"0\\" type=\\"number\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <h3 style={{...}}>
    Faults
  </h3>
  <Select name=\\"faultType\\" label=\\"Fault Type\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField name=\\"httpStatus\\" label=\\"HTTP Status\\" defaultValue={[undefined]} type=\\"number\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
</Styled(div)>"
`;

exports[`Start Experiment workflow renders correctly with upstream cluster type selection enabled 1`] = `
"<Styled(div)>
  <h3 style={{...}}>
    Cluster Pair
  </h3>
  <TextField name=\\"downstreamCluster\\" label=\\"Downstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <TextField name=\\"upstreamCluster\\" label=\\"Upstream Cluster\\" defaultValue={[undefined]} type=\\"text\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <RadioGroup name=\\"upstreamClusterType\\" label=\\"Upstream Cluster Type\\" disabled={[undefined]} options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField name=\\"requestsPercentage\\" label=\\"Percentage of Requests Served by All Hosts\\" defaultValue=\\"0\\" type=\\"number\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
  <h3 style={{...}}>
    Faults
  </h3>
  <Select name=\\"faultType\\" label=\\"Fault Type\\" options={{...}} defaultOption={0} onChange={[Function: onChange]} />
  <TextField name=\\"httpStatus\\" label=\\"HTTP Status\\" defaultValue={[undefined]} type=\\"number\\" onChange={[Function: H]} inputRef={[Function: ref]} error={false} helperText=\\"\\" onBlur={[Function: H]} />
</Styled(div)>"
`;
